--- a/src/components/TabContent/TabContent.scss
+++ b/src/components/TabContent/TabContent.scss
@@ -1,7 +1,12 @@
 .tab-content {
-  height: calc(100% - 80px);
+  height: calc(100% - 70px);
   position: relative;
-  margin-top: 10px;
+  overflow: auto;
+  margin-top: 1rem;
+
+  .ql-container {
+    height: calc(100% - 42px);
+  }
 
   &__container {
     height: 100%;
